--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,12 @@
     <string name="release_date">Release Date</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="budget">Budget</string>
+    <string name="genres">Genres</string>
+    <string name="overview">Overview</string>
+    <string name="home_page">Home Page</string>
+    <string name="revenue">Revenue</string>
+    <string name="runtime">Runtime</string>
+    <string name="company_name">Company Name</string>
+    <string name="company_image">Company Image</string>
 </resources>
