--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,5 @@
     <string name="runtime">Runtime</string>
     <string name="company_name">Company Name</string>
     <string name="company_image">Company Image</string>
+    <string name="production_companies">Production Companies</string>
 </resources>
