--- a/app/src/main/res/values-tr/strings.xml
+++ b/app/src/main/res/values-tr/strings.xml
@@ -1,21 +1,22 @@
 <resources>
     <string name="app_name">Film Listesi</string>
     <string name="poster">Poster</string>
-    <string name="title">Baslik</string>
+    <string name="title">Başlık</string>
     <string name="language">Dil</string>
-    <string name="vote_average">Oy ortalamasi</string>
+    <string name="vote_average">Oy ortalaması</string>
     <string name="vote_count">Toplam oy</string>
-    <string name="popularity">Populerlik</string>
-    <string name="release_date">Cikis Tarihi</string>
+    <string name="popularity">Popülerlik</string>
+    <string name="release_date">Çıkış tarihi</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="budget">Butce</string>
-    <string name="genres">Turler</string>
+    <string name="budget">Bütçe</string>
+    <string name="genres">Türler</string>
     <string name="overview">Konu</string>
     <string name="home_page">Anasayfa</string>
     <string name="revenue">Gelir</string>
-    <string name="runtime">Sure</string>
-    <string name="company_name">Yapimci adi</string>
-    <string name="company_image">Yapimci Gorseli</string>
-    <string name="production_companies">Yapimci Sirketler</string>
+    <string name="runtime">Süre</string>
+    <string name="company_name">Yapımcı adı</string>
+    <string name="company_image">Yapımcı Görseli</string>
+    <string name="production_companies">Yapımcı Şirketler</string>
+    <string name="search_bar_hint">Lütfen arama yapabilmek için en az 2 harf girin.</string>
 </resources>
